<resources>
    <string name="app_name">71190458</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="login">LOGIN</string>
    <string name="forgetPassword">Forget your password?</string>
    <string name="donthaveanAccount">Don\'t have an account?</string>
</resources>